@@ -1,0 +1,5 @@
+[B]Version 2.0.0[/B]
+- Added new offshoregit repo location
+
+[B]Version 1.0.1[/B]
+- Initial version
